deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-sa
      containers:
      - name: tasky
        image: praveenjohnkumar/tasky:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
