tasky-deployment.yaml
# tasky-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: praveenjohnkumar/tasky:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
