tasky-ingress.yaml
# tasky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasky-service
                port:
                  number: 80
